@@ -38,8 +38,16 @@ custom_field_factories =
 
 [FORMATS]
 # Custom output formats
-completion = $(completed)-16.16s $(is_open)4.4s $(up.sz)10s/s $(ratio.pc)5d%%%% $(alias)-8s $(name)s
-short      = $(completed)-16.16s $(size.sz)10s $(uploaded.sz)10s $(ratio.pc)5d%%%% $(alias)-8s $(name)s
+completion = $(completed)-16.16s $(is_open)4.4s $(up.sz)10s/s $(ratio.pc)5d$(pc)s $(alias)-8s $(kind)-8s $(name)s
+short      = $(completed)-16.16s $(size.sz)10s $(uploaded.sz)10s $(ratio.pc)5d$(pc)s $(alias)-8s $(name)s
+files      = $(is_active)-6s $(completed)s $(size.sz)s $(name)s {$(alias)s}
+             $(files)s [$(kind)s]\n
+
+# TODO: defaults loaded from package data need triple(!) escaping - this has to be fixed!
+;percent1   = $(alias)s %%       $(name)s
+percent2   = $(alias)s %%%%     $(name)s
+percent3   = $(alias)s %%%%%%%% $(name)s
+; END testing formats
 
 
 [ANNOUNCE]
